src/objects/Product2/fields/Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Product Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>