src/objects/Product2/fields/Product_PLM_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_PLM_Email__c</fullName>
    <label>Product PLM Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>