src/objects/Product2/fields/Product_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Text__c</fullName>
    <formula>TEXT(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type Text</label>
    <type>Text</type>
</CustomField>