src/objects/Product2/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <inlineHelpText>As managed in Glovia</inlineHelpText>
    <label>Revision</label>
    <length>5</length>
    <type>Text</type>
</CustomField>