src/objects/Product2/fields/Rich_Text_Deutsch__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Deutsch__c</fullName>
    <label>Rich Text - Deutsch</label>
    <length>25000</length>
    <type>Html</type>
</CustomField>