src/objects/Product2/fields/Sales_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Time_Days__c</fullName>
    <label>Sales Lead Time (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>