src/objects/Product2/fields/Similar_To_Part__c.field-meta.xml
<CustomField>
    <fullName>Similar_To_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Similar To Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Similar To Products</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>