src/objects/Product2/fields/Sourcing_Org__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Org__c</fullName>
    <label>Sourcing Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>