src/objects/Product2/fields/Standard_From_Dallas__c.field-meta.xml
<CustomField>
    <fullName>Standard_From_Dallas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dallas -01 standard</description>
    <inlineHelpText>If this box is checked the standard cost showing came from -01 Dallas Glovia</inlineHelpText>
    <label>Standard From Dallas</label>
    <type>Checkbox</type>
</CustomField>