src/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Concept</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Prelim</fullName>
            </value>
            <value>
                <fullName>1stArticle</fullName>
            </value>
            <value>
                <fullName>Pre-Prod</fullName>
            </value>
            <value>
                <fullName>Experiment</fullName>
            </value>
            <value>
                <fullName>Items.Obsolete</fullName>
            </value>
            <value>
                <fullName>Mechanical engineering</fullName>
            </value>
            <value>
                <fullName>Items.Pilot</fullName>
            </value>
            <value>
                <fullName>Items.Production</fullName>
            </value>
            <value>
                <fullName>Items.Pre-Production</fullName>
            </value>
            <value>
                <fullName>Items.Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>