src/objects/Product2/fields/X18_Digit_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Product_ID__c</fullName>
    <description>18-digit ID of Product record.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18-Digit Product ID</label>
    <type>Text</type>
</CustomField>