src/objects/Product2/validationRules/Generic_Product_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Generic_Product_Validation</fullName>
    <active>true</active>
    <description>For Generic Product Generic Parent Should be null</description>
    <errorConditionFormula>AND(  
 OR( ISPICKVAL(Type__c  , &apos;Generic&apos;) ,
    ISPICKVAL(Type__c  , &apos;Generic Parent&apos;)
    ),
   
   NOT(ISBLANK(Generic_Parent__c ))
   
)</errorConditionFormula>
    <errorDisplayField>Generic_Parent__c</errorDisplayField>
    <errorMessage>For Generic Products Generic Parent Should be empty</errorMessage>
</ValidationRule>