src/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_PLM_Email__c</columns>
    <columns>Marketing_Family__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Marketing_P_N__c</columns>
    <columns>Available__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Commodity_Code__c</columns>
    <columns>Child_Product_Check__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Return_Instruction__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Duplicate_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>