src/objects/Product2/listViews/Update_Lead_Time.listView-meta.xml
<ListView>
    <fullName>Update_Lead_Time</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Lead_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Update Lead Time</label>
    <sharedTo>
        <role>Sales_Admin</role>
    </sharedTo>
</ListView>