src/objects/Product2/listViews/WSS_BU.listView-meta.xml
<ListView>
    <fullName>WSS_BU</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BUDescription__c</field>
        <operation>contains</operation>
        <value>WSS</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>WSS-OCM,WSS-OIG</value>
    </filters>
    <label>WSS BU</label>
</ListView>